--- a/ui/style.css
+++ b/ui/style.css
@@ -1,16 +1,16 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat');
 
 :root {
-    --color-1: #1E3955;
-    --color-2: #213F5F;
-    --color-3: #2C537B;
-    --color-4: #23405E;
-    --color-5: #152638;
+    --color-1: rgb(12 117 230 / 60%);
+    --color-2: transparent;
+    --color-3: transparent;
+    --color-4: rgba(0,0,0,0.5);
+    --color-5: rgba(0,0,0,0.3);
     --color-6: #121f2c;
     --color-7: rgb(28, 54, 82);
     --color-8: #2554cc;
-    --color-9: #6E707C;
-    --color-10: #8f741b;
+    --color-9: rgba(0,0,0,0.9);
+    --color-10: rgba(206,162,18,0.9);
 }
 
 body {
@@ -36,7 +36,7 @@ input::-webkit-inner-spin-button {
 .dashboard-page-container  {
     background-color: var(--color-9);
     border-radius: 15px;
-    position: absolute; 
+    position: absolute;
     width: 96.5%;
     height: 96.5%;
     left: 2.0%;
@@ -51,7 +51,7 @@ input::-webkit-inner-spin-button {
 .profile-page-container {
     background-color: var(--color-9);
     border-radius: 15px;
-    position: absolute; 
+    position: absolute;
     width: 96.5%;
     height: 96.5%;
     left: 2.0%;
@@ -62,7 +62,7 @@ input::-webkit-inner-spin-button {
 .incidents-page-container {
     background-color: var(--color-9);
     border-radius: 15px;
-    position: absolute; 
+    position: absolute;
     width: 96.5%;
     height: 96.5%;
     left: 2.0%;
@@ -73,7 +73,7 @@ input::-webkit-inner-spin-button {
 .bolos-page-container {
     background-color: var(--color-9);
     border-radius: 15px;
-    position: absolute; 
+    position: absolute;
     width: 96.5%;
     height: 96.5%;
     left: 2.0%;
@@ -84,7 +84,7 @@ input::-webkit-inner-spin-button {
 .reports-page-container {
     background-color: var(--color-9);
     border-radius: 15px;
-    position: absolute; 
+    position: absolute;
     width: 96.5%;
     height: 96.5%;
     left: 2.0%;
@@ -95,7 +95,7 @@ input::-webkit-inner-spin-button {
 .penalcode-page-container {
     background-color: var(--color-9);
     border-radius: 15px;
-    position: absolute; 
+    position: absolute;
     width: 96.5%;
     height: 96.5%;
     left: 2.0%;
@@ -106,7 +106,7 @@ input::-webkit-inner-spin-button {
 .dmv-page-container {
     background-color: var(--color-9);
     border-radius: 15px;
-    position: absolute; 
+    position: absolute;
     width: 96.5%;
     height: 96.5%;
     left: 2.0%;
@@ -117,7 +117,7 @@ input::-webkit-inner-spin-button {
 .stafflogs-page-container  {
     background-color: var(--color-9);
     border-radius: 15px;
-    position: absolute; 
+    position: absolute;
     width: 96.5%;
     height: 96.5%;
     left: 2.0%;
@@ -129,7 +129,7 @@ input::-webkit-inner-spin-button {
 .container-load {
     background-color: var(--color-9);
     border-radius: 15px;
-    position: absolute; 
+    position: absolute;
     width: 96.5%;
     height: 96.5%;
     left: 2.0%;
@@ -623,7 +623,7 @@ span.bulletin-item-info[contenteditable]:empty::before {
     width: fit-content;
     padding: 5px;
     padding-left: 15px;
-    padding-right: 15px;  
+    padding-right: 15px;
     color: white;
     font-size: 12px;
     font-weight: bolder;
@@ -646,7 +646,7 @@ span.bulletin-item-info[contenteditable]:empty::before {
     width: fit-content;
     padding: 5px;
     padding-left: 15px;
-    padding-right: 15px;    
+    padding-right: 15px;
     color: white;
     font-size: 12px;
     font-weight: bolder;
@@ -1551,7 +1551,7 @@ span.tag-input[contenteditable]:empty::before {
     width: 95%;
     align-items: center;
     user-select: none;
-    
+
 }
 
 .convictions-holder {
@@ -1635,7 +1635,7 @@ span.tag-input[contenteditable]:empty::before {
     white-space: nowrap;
 }
 
-.contextmenu-btn { 
+.contextmenu-btn {
     display: block;
     color: white;
     font-size: 13px;
@@ -1678,7 +1678,7 @@ span.tag-input[contenteditable]:empty::before {
     top: 50%;
     transform: translateY(-50%);
     border: 5px solid transparent;
-    border-left-color: #808080; 
+    border-left-color: #808080;
 }
 
 .contextmenu-item-submenu:hover::after {
@@ -5494,7 +5494,7 @@ span.civilian-tag-reports-input[contenteditable]:empty::before {
     user-select: none;
     width: fit-content;
     background-color: white;
-    color: black;   
+    color: black;
 }
 
 .orange-penis-code {
@@ -5765,12 +5765,12 @@ span.civilian-tag-reports-input[contenteditable]:empty::before {
 
 .impound-form > form {
     position: absolute;
-    left: 10%;  
+    left: 10%;
     width: 73%;
-    height: 100%; 
+    height: 100%;
 }
 
-.impound-form > form > input { 
+.impound-form > form > input {
     border: none;
     outline: none;
     font-size: 24px;
@@ -5860,7 +5860,7 @@ span.civilian-tag-reports-input[contenteditable]:empty::before {
 .cams-page-container {
     background-color: var(--color-9);
     border-radius: 15px;
-    position: absolute; 
+    position: absolute;
     width: 96.5%;
     height: 96.5%;
     left: 2.0%;
@@ -5883,7 +5883,7 @@ span.civilian-tag-reports-input[contenteditable]:empty::before {
 }
 
 .cams-item {
-    display: grid; 
+    display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
     grid-auto-flow: row;
     gap: 15px 15px;
@@ -5895,7 +5895,7 @@ span.civilian-tag-reports-input[contenteditable]:empty::before {
 
 .cams-items {
     background-color: var(--color-5);
-    height: auto; 
+    height: auto;
     padding: 10px;
     text-align: center;
     margin: 10px;
@@ -5907,7 +5907,7 @@ span.civilian-tag-reports-input[contenteditable]:empty::before {
 }
 
 .cams-image {
-    height:125px; 
+    height:125px;
     width: auto;
     margin: 10px;
 
